flux/apps/base/capacitor/capacitor.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/tls-acme: "true"
    gethomepage.dev/description: A general purpose UI for FluxCD.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: Capacitor
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.zshen.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
  tls:
    - secretName: capacitor-tls
      hosts:
        - gitops.zshen.me
